--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,1 +1,9 @@
-// app global css in Stylus form
+// app global css
+@font-face {
+  font-family: sans;
+  src: url(./fonts/MerriweatherSans-Regular.woff);
+}
+
+.my-font {
+  font-family: 'sans';
+}
